--- a/sass/_color.sass
+++ b/sass/_color.sass
@@ -5,3 +5,10 @@ $bg_formPlaceHolder: #57565B
 $bg_social: #C4C4C4
 $bg_counter: #FFAF19
 $bg_main: #F37321
+$color_main: #F37321
+$bg_button: #F47322
+$txt_white: #ffffff
+$button-grey: #5F5F61
+$tabs-discription: #B9B9BE
+$tabs-price: #4B4B51
+$tabs-weight: #AAAAB1
