--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,47 @@ body {
   margin: 0 auto;
 }
 
+@media (max-width: 1250px) {
+  .container {
+    width: 1000px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .container {
+    width: 800px;
+  }
+}
+
+@media (max-width: 850px) {
+  .container {
+    width: 600px;
+  }
+}
+
+.section__title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 23px;
+  margin-bottom: 40px;
+}
+
+input[type=text]::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+input[type=text]::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-results-button, input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
 .header {
   margin: 10px auto;
   display: flex;
@@ -20,9 +61,8 @@ body {
   border-radius: 10px;
   display: flex;
   align-items: center;
-  flex-grow: 1;
+  flex: 0 1 51.84%;
   position: relative;
-  max-width: 620px;
 }
 
 .search__input {
@@ -30,7 +70,7 @@ body {
   line-height: 23px;
   color: #57565B;
   background-color: transparent;
-  width: 100%;
+  width: 96%;
   padding: 13px 20px;
 }
 
@@ -42,6 +82,24 @@ body {
   height: 100%;
   padding: 0 18px;
   cursor: pointer;
+}
+
+@media (max-width: 1250px) {
+  .search__form {
+    margin-left: auto;
+  }
+  .search__input {
+    width: 94%;
+  }
+}
+
+@media (max-width: 850px) {
+  .search__form {
+    flex: 0 1 38%;
+  }
+  .search__input {
+    width: 89%;
+  }
 }
 
 .auth {
@@ -75,4 +133,416 @@ body {
   position: absolute;
   right: 0;
   bottom: 0;
+}
+
+.slide {
+  border-radius: 20px;
+  overflow: hidden;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  padding: 100px;
+  position: relative;
+}
+
+.slide__content {
+  position: relative;
+  max-width: 400px;
+}
+
+.slide__title {
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 51px;
+}
+
+.slide__text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+
+.slide__text_white {
+  color: #ffffff;
+}
+
+.slide__seasson:before {
+  content: '';
+  position: absolute;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 40.45%, rgba(0, 0, 0, 0) 100%);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.slide__seasson_autumn {
+  background-image: url("../img/main/1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slide__seasson_summer {
+  background-image: url("../img/main/2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slide__seasson_winner {
+  background-image: url("../img/main/3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slide__button {
+  display: inline-block;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+  background: #F47322;
+}
+
+.button__primary {
+  border-radius: 25px;
+  padding: 13px 53px;
+}
+
+.promo {
+  padding-top: 50px;
+}
+
+.promo__raw {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 1250px) {
+  .promo__raw {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.card {
+  padding: 32px;
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  max-width: 570px;
+  width: 100%;
+  min-height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card:before {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.card__text-light {
+  color: #ffffff;
+}
+
+.card__title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-top: 4px;
+  margin-bottom: 21px;
+}
+
+.card__description {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  max-width: 200px;
+}
+
+.card__price {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-bottom: 8px;
+}
+
+.card__delivery {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 25px;
+}
+
+.card__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -4;
+  object-fit: cover;
+}
+
+@media (max-width: 1250px) {
+  .card {
+    max-width: none;
+    margin-bottom: 20px;
+  }
+  .card:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.button__default {
+  display: inline-block;
+  border-radius: 50px;
+  padding: 13px 53px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  color: #5F5F61;
+  background-color: #fff;
+}
+
+.delivery-week {
+  padding: 100px 0;
+}
+
+.delivery__cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
+.delivery__card {
+  margin: 15px;
+  position: relative;
+  width: 275px;
+  height: 182px;
+  border-radius: 18px;
+  overflow: hidden;
+}
+
+.delivery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.delivery__tag {
+  position: absolute;
+  left: 10px;
+  top: 16px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.delivery__tag_health {
+  color: #49494F;
+  background: #D0FD89;
+}
+
+.delivery__tag_vegetables {
+  color: #fff;
+  background: #AEBC41;
+}
+
+.delivery__tag_meat {
+  color: #fff;
+  background: #B86B78;
+}
+
+.delivery__tag_birds {
+  color: #fff;
+  background: #D68334;
+}
+
+.delivery__tag_fish {
+  color: #fff;
+  background: #CD6255;
+}
+
+.delivery__tag_kids {
+  color: #49494F;
+  background: #FFFDBF;
+}
+
+.delivery__tag_parents {
+  color: #49494F;
+  background: #F6FDC8;
+}
+
+.delivery__tag_celebrate {
+  color: #49494F;
+  background: #FEF7FE;
+}
+
+.category {
+  background: #F6F6F6;
+  padding: 40px 0 60px;
+}
+
+.tabs {
+  display: flex;
+  margin-bottom: 62px;
+}
+
+.tabs__item {
+  margin-right: 58px;
+}
+
+.tabs__item:last-child {
+  margin-right: 0;
+}
+
+.tabs__link {
+  font-size: 20px;
+  line-height: 23px;
+  color: #49494F;
+}
+
+.tabs__link.active {
+  color: #F37321;
+}
+
+.tabs__link:hover {
+  color: #F37321;
+  cursor: pointer;
+}
+
+.tabs__content {
+  margin: -15px;
+}
+
+.tabs__cards {
+  display: flex;
+}
+
+.tabs__card {
+  margin: 15px;
+  max-width: 270px;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.tabs__card-content {
+  padding: 23px;
+}
+
+.tabs__image {
+  max-width: 100%;
+}
+
+.tabs__title {
+  margin-bottom: 13px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.tabs__discription {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+  color: #B9B9BE;
+  margin-bottom: 36px;
+}
+
+.tabs__info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.tabs__price {
+  font-weight: 500;
+  font-size: 23px;
+  line-height: 23px;
+  color: #4B4B51;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.tabs__weight {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 20px;
+  color: #AAAAB1;
+}
+
+.button {
+  cursor: pointer;
+}
+
+.button_outline {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #F37321;
+  background-color: transparent;
+  border: 2px solid #F37321;
+  border-radius: 33px;
+  padding: 15px 25px;
+}
+
+.button_center {
+  display: block;
+  margin: 60px auto 0;
+  width: 315px;
+}
+
+.footer {
+  background: #F6F6F6;
+  padding: 40px 0;
+}
+
+.footer__wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.footer__logo {
+  margin-right: 50px;
+}
+
+.footer__link {
+  font-size: 16px;
+  line-height: 23px;
+  text-decoration-line: underline;
+  color: #000000;
+  margin-right: 50px;
+}
+
+.footer__link:last-child {
+  margin-right: 0;
+}
+
+.social__links {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.social__link {
+  margin-left: 20px;
 }
