--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -5,3 +5,30 @@ body
 .container
    width: 1196px
    margin: 0 auto
+@media (max-width: 1250px)
+   .container
+      width: 1000px
+@media (max-width: 1050px)
+   .container
+      width: 800px
+@media (max-width: 850px)
+   .container
+      width: 600px
+    
+.section
+   &__title
+      font-weight: 500
+      font-size: 32px
+      line-height: 23px
+      margin-bottom: 40px
+
+input[type=text]::-ms-clear
+   display: none
+   width : 0 
+   height: 0
+input[type=text]::-ms-reveal
+   display: none
+   width : 0
+   height: 0
+input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-results-button, input[type="search"]::-webkit-search-results-decoration
+   display: none
