--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,47 @@ input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-s
   width: 315px;
 }
 
+.benefits {
+  padding: 100px 0 200px;
+}
+
+.benefits__block {
+  margin-top: 52px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.benefits__item {
+  max-width: 270px;
+  background: #FFFFFF;
+  border: 1px solid #E9E9E9;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.benefits__icon {
+  margin: 30px auto;
+}
+
+.benefits__title {
+  margin: auto 35px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+}
+
+.benefits__discription {
+  margin: 13px 23px 25px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  color: #49494F;
+}
+
 .footer {
   background: #F6F6F6;
   padding: 40px 0;
