--- a/sass/bloks/_main.sass
+++ b/sass/bloks/_main.sass
@@ -330,3 +330,33 @@
 
 
 
+.benefits
+   padding: 100px 0 200px
+   &__block
+      margin-top: 52px
+      display: flex
+      justify-content: space-between
+   &__item
+      max-width: 270px
+      background: #FFFFFF
+      border: 1px solid #E9E9E9
+      box-sizing: border-box
+      box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1)
+      border-radius: 18px
+      text-align: center
+      overflow: hidden
+   &__icon
+      margin: 30px auto
+   &__title
+      margin: auto 35px 
+      font-weight: 500
+      font-size: 16px
+      line-height: 23px
+
+   &__discription
+      margin: 13px 23px 25px
+      font-weight: normal
+      font-size: 14px
+      line-height: 22px
+      text-align: center
+      color: #49494F
